# lgrep

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build-and-verify.yml  ci-rust.yml  release.yml
src/: cli.rs  handler.rs  io.rs  lib.rs  main.rs  read.rs  write.rs
src/handler/: from_cli_tests.rs  handler_tests.rs  tests.rs
src/read/: lines.rs  records.rs  source.rs
src/write/: capabilities.rs
