[package]
name = "lgrep"
description = "A grep-like tool for log files with multi-line records"
authors = [
    "Barney Boisvert <bboisvert@gmail.com>"
]
version = "1.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"

[target.'cfg(not(windows))'.dependencies]
compress_io = "0.5.0"
