[package]
name = "lgrep"
description = "A grep-like tool for log files with multi-line records"
authors = [
    "Barney Boisvert <bboisvert@gmail.com>"
]
version = "1.6.0"
repository = "https://github.com/barneyb/lgrep/"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
is-terminal = "0.4.12"
regex-automata = "0.4.7"
shadow-rs = "0.30.0"

[target.'cfg(not(windows))'.dependencies]
compress_io = "0.5.0"

[build-dependencies]
shadow-rs = "0.30.0"
